# h

Eigen_Vectors_and_value_forward/Eigen_Vectors_and_value_forward/: CMakeLists.txt  Matrix.h  main.cpp
Eigen_Vectors_and_value_forward/build-Eigen_Vectors_and_value_forward-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Eigen_Vectors_and_value_forward  build.ninja  cmake_install.cmake
Eigen_Vectors_and_value_forward/build-Eigen_Vectors_and_value_forward-Desktop_Qt_6_0_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Eigen_Vectors_and_value_forward  build.ninja  cmake_install.cmake
Method_Rotation_Eigen_Vectors_and_Values/Method_Rotation_Jacobi_Eigen_Vectors_and_Values/: CMakeLists.txt  main.cpp
Method_Rotation_Eigen_Vectors_and_Values/build-Method_Rotation_Jacobi_Eigen_Vectors_and_Values-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Method_Rotation_Jacobi_Eigen_Vectors_and_Values  build.ninja  cmake_install.cmake
Method_Rotation_Eigen_Vectors_and_Values/build-Method_Rotation_Jacobi_Eigen_Vectors_and_Values-Desktop_Qt_6_0_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Method_Rotation_Jacobi_Eigen_Vectors_and_Values  build.ninja  cmake_install.cmake
Method_of_Min_Square/Method_of_Min_Square/: CMakeLists.txt  main.cpp
Method_of_Min_Square/build-Method_of_Min_Square-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Method_of_Min_Square  build.ninja  cmake_install.cmake
One_NonLenier_Equation/Method_Chord/Method_Chord/: CMakeLists.txt  (+1 more)
SLAE_Gauss_Method_Major_Component/SLAE_Gauss_Method_Major_Component/: CMakeLists.txt  Matrix.cpp  main.cpp
SLAE_Gauss_Method_Major_Component/build-SLAE_Gauss_Method_Major_Component-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  SLAE_Gauss_Method_Major_Component  build.ninja  cmake_install.cmake
System_NonLenier_Equations/System_of_NonLinear_Equations/: CMakeLists.txt  Matrix.h  main.cpp
System_NonLenier_Equations/build-System_of_NonLinear_Equations-Desktop_Qt_5_15_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  System_of_NonLinear_Equations  build.ninja  cmake_install.cmake
lagrange/build-lagrange-Desktop_Qt_6_0_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  data1.csv  data1.txt  lagrange
lagrange/lagrange/: CMakeLists.txt  main.cpp
spline/build-spline-Desktop_Qt_6_0_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  data.txt  spline
spline/spline/: CMakeLists.txt  Matrix.cpp  main.cpp
(+116 files in other folders)
